--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -492,8 +492,48 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <h5 class="mb-2" style="font-size: 0.9rem;">Portfolio Actions</h5>
+                                        <div class="card mb-3">
+                                            <div class="card-body p-2">
+                                                <h6 class="card-title mb-2" style="font-size: 0.85rem;">Select Assets for Diversification</h6>
+                                                <div class="row mb-2">
+                                                    <div class="col-6">
+                                                        <div class="custom-control custom-checkbox">
+                                                            <input type="checkbox" class="custom-control-input diversify-asset" id="diversify-bitcoin" value="Bitcoin" checked>
+                                                            <label class="custom-control-label" for="diversify-bitcoin" style="font-size: 0.85rem;">Bitcoin</label>
+                                                        </div>
+                                                        <div class="custom-control custom-checkbox">
+                                                            <input type="checkbox" class="custom-control-input diversify-asset" id="diversify-bonds" value="Bonds" checked>
+                                                            <label class="custom-control-label" for="diversify-bonds" style="font-size: 0.85rem;">Bonds</label>
+                                                        </div>
+                                                        <div class="custom-control custom-checkbox">
+                                                            <input type="checkbox" class="custom-control-input diversify-asset" id="diversify-commodities" value="Commodities" checked>
+                                                            <label class="custom-control-label" for="diversify-commodities" style="font-size: 0.85rem;">Commodities</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-6">
+                                                        <div class="custom-control custom-checkbox">
+                                                            <input type="checkbox" class="custom-control-input diversify-asset" id="diversify-gold" value="Gold" checked>
+                                                            <label class="custom-control-label" for="diversify-gold" style="font-size: 0.85rem;">Gold</label>
+                                                        </div>
+                                                        <div class="custom-control custom-checkbox">
+                                                            <input type="checkbox" class="custom-control-input diversify-asset" id="diversify-real-estate" value="Real Estate" checked>
+                                                            <label class="custom-control-label" for="diversify-real-estate" style="font-size: 0.85rem;">Real Estate</label>
+                                                        </div>
+                                                        <div class="custom-control custom-checkbox">
+                                                            <input type="checkbox" class="custom-control-input diversify-asset" id="diversify-sp500" value="S&P 500" checked>
+                                                            <label class="custom-control-label" for="diversify-sp500" style="font-size: 0.85rem;">S&P 500</label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="d-flex justify-content-between">
+                                                    <button id="select-all-assets-btn" class="btn btn-outline-secondary btn-sm">Select All</button>
+                                                    <button id="deselect-all-assets-btn" class="btn btn-outline-secondary btn-sm">Deselect All</button>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <div class="d-flex justify-content-between">
                                             <button id="buy-all-btn" class="btn btn-success btn-sm">Distribute Cash Evenly</button>
+                                            <button id="buy-selected-btn" class="btn btn-success btn-sm">Distribute to Selected</button>
                                             <button id="sell-all-btn" class="btn btn-danger btn-sm">Sell All Assets</button>
                                         </div>
                                     </div>
