--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -347,7 +347,7 @@
                                         <th>Asset</th>
                                         <th>Price</th>
                                         <th>Change</th>
-                                        <th>Chart</th>
+                                        <th>Total % Change</th>
                                     </tr>
                                 </thead>
                                 <tbody id="ta-asset-prices-table">
@@ -362,25 +362,6 @@
                                     </tr>
                                 </tbody>
                             </table>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Game Instructions -->
-                <div class="card shadow-lg mb-4">
-                    <div class="card-header bg-info text-white">
-                        <h4 class="mb-0"><i class="fas fa-info-circle mr-2"></i> TA Instructions</h4>
-                    </div>
-                    <div class="card-body">
-                        <div class="alert alert-warning">
-                            <h5><i class="fas fa-exclamation-triangle mr-2"></i> Important Notes</h5>
-                            <ul class="mb-0">
-                                <li>Click <strong>Next Round</strong> to advance the game to the next round.</li>
-                                <li>Students can trade assets in each round before you advance.</li>
-                                <li>Make the price reveals dramatic! Build suspense before clicking Next Round.</li>
-                                <li>Encourage discussion about market trends and investment strategies.</li>
-                                <li>The game will automatically end after 20 rounds.</li>
-                            </ul>
                         </div>
                     </div>
                 </div>
