--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -344,9 +344,9 @@
                             <table class="table table-sm table-hover mb-0" id="market-data-table">
                                 <thead class="thead-dark">
                                     <tr>
-                                        <th>Asset</th>
-                                        <th>Price</th>
-                                        <th>Change</th>
+                                        <th>Asset Name</th>
+                                        <th>Current Price</th>
+                                        <th>Round Change %</th>
                                         <th>Total % Change</th>
                                     </tr>
                                 </thead>
