--- a/activities/investment-odyssey/about.html
+++ b/activities/investment-odyssey/about.html
@@ -98,9 +98,11 @@
             <div class="banner-overlay">
                 <div class="container mx-auto">
                     <div class="nav-links">
-                        <a href="../../index.html" class="nav-link">← Back to Course Home</a>
-                        <a href="../index.html" class="nav-link">← Back to Activities</a>
-                        <a href="../../games.html" class="nav-link">← Games Home</a>
+                        <a href="../../index.html">Home</a>
+                        <a href="../../activities/index.html">Activities</a>
+                        <a href="about.html" class="active">About</a>
+                        <a href="index.html">Play Game</a>
+                        <a href="leaderboard.html">Leaderboard</a>
                     </div>
                     <h1 class="activity-title">About Investment Odyssey</h1>
                     <p class="activity-date">Understanding the market simulation</p>
@@ -120,8 +122,11 @@
                     and learn how different asset classes perform over time.
                 </p>
                 <div class="mt-5">
-                    <a href="game-modes.html" class="cta-button bg-indigo-600 text-white hover:bg-indigo-700">
-                        Start Game <i class="fas fa-arrow-right ml-2"></i>
+                    <a href="index.html" class="cta-button bg-indigo-600 text-white hover:bg-indigo-700 mr-3">
+                        Play Single Player <i class="fas fa-user ml-2"></i>
+                    </a>
+                    <a href="class-game.html" class="cta-button bg-green-600 text-white hover:bg-green-700">
+                        Join Class Game <i class="fas fa-users ml-2"></i>
                     </a>
                 </div>
             </div>
@@ -487,8 +492,11 @@
                 <p class="text-lg text-gray-600 mb-5">
                     Put your knowledge to the test and see how your investment strategies perform over time.
                 </p>
-                <a href="index.html" class="cta-button bg-indigo-600 text-white hover:bg-indigo-700">
-                    Start Game <i class="fas fa-arrow-right ml-2"></i>
+                <a href="index.html" class="cta-button bg-indigo-600 text-white hover:bg-indigo-700 mr-3">
+                    Play Single Player <i class="fas fa-user ml-2"></i>
+                </a>
+                <a href="class-game.html" class="cta-button bg-green-600 text-white hover:bg-green-700">
+                    Join Class Game <i class="fas fa-users ml-2"></i>
                 </a>
             </div>
         </div>
