--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -223,7 +223,9 @@
                         <a href="../../index.html">Home</a>
                         <a href="../../activities/index.html">Activities</a>
                         <a href="about.html">About</a>
-                        <a href="game-modes.html">Play Game</a>
+                        <a href="index.html">Play Game</a>
+                        <a href="class-game.html">Class Game</a>
+                        <a href="ta-controls.html" class="active">TA Controls</a>
                         <a href="leaderboard.html">Leaderboard</a>
                     </div>
                     <h1 class="banner-title">Investment Odyssey</h1>
