--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -170,7 +170,8 @@
                         <a href="../../index.html">Home</a>
                         <a href="../../activities/index.html">Activities</a>
                         <a href="about.html">About</a>
-                        <a href="game-modes.html">Play Game</a>
+                        <a href="index.html">Play Game</a>
+                        <a href="class-game.html" class="active">Class Game</a>
                         <a href="leaderboard.html">Leaderboard</a>
                     </div>
                     <h1 class="banner-title">Investment Odyssey</h1>
