--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -349,9 +349,14 @@
                                             <div class="form-group mb-2">
                                                 <input type="number" class="form-control" id="quantity-input" min="0.000001" step="0.000001" required>
                                             </div>
-                                            <div class="d-flex justify-content-between">
-                                                <button id="buy-all-btn" class="btn btn-success btn-sm">Distribute Cash Evenly</button>
-                                                <button id="sell-all-btn" class="btn btn-danger btn-sm">Sell All Assets</button>
+                                            <div class="mb-2">
+                                                <button id="buy-all-btn" class="btn btn-success btn-sm btn-block">Distribute Cash Evenly Across All Assets</button>
+                                            </div>
+                                            <div class="mb-2">
+                                                <button id="buy-selected-btn" class="btn btn-info btn-sm btn-block">Distribute Cash Across Selected Asset</button>
+                                            </div>
+                                            <div>
+                                                <button id="sell-all-btn" class="btn btn-danger btn-sm btn-block">Sell All Assets</button>
                                             </div>
                                         </div>
                                     </div>
