--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -185,43 +185,7 @@
 
 
 
-        <!-- Market Data & Portfolio -->
-        <div class="row mb-3">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
-                        <div class="d-flex align-items-center">
-                            <i class="fas fa-chart-line mr-2"></i>
-                            <h3 class="mb-0" style="font-size: 1.5rem;">Market Data & Portfolio</h3>
-                        </div>
-                        <div>
-                            <span class="badge badge-pill badge-danger">
-                                Round <span id="round-display">0</span>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="card-body p-0">
-                        <div class="table-responsive">
-                            <table class="table table-striped table-sm mb-0">
-                                <thead class="thead-light">
-                                    <tr>
-                                        <th>ASSET</th>
-                                        <th>PRICE</th>
-                                        <th>CHANGE</th>
-                                        <th>QUANTITY</th>
-                                        <th>VALUE</th>
-                                        <th>%</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="market-data-body">
-                                    <!-- Market data will be populated here dynamically -->
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!-- Market Data & Portfolio container removed to eliminate redundancy -->
 
         <!-- Game Controls & Trading -->
         <div class="row mb-3">
