--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -94,6 +94,19 @@
 
     <!-- Main Content -->
     <div class="container my-5">
+        <!-- Leaderboard Tabs -->
+        <ul class="nav nav-tabs mb-4" id="leaderboardTabs" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="single-tab" data-toggle="tab" href="#single" role="tab" aria-controls="single" aria-selected="true">Single Player</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="class-tab" data-toggle="tab" href="#class" role="tab" aria-controls="class" aria-selected="false">Class Games</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="overall-tab" data-toggle="tab" href="#overall" role="tab" aria-controls="overall" aria-selected="false">Overall</a>
+            </li>
+        </ul>
+
         <!-- Filters -->
         <div class="card mb-4 shadow-sm">
             <div class="card-body">
@@ -172,42 +185,131 @@
             </div>
         </div>
 
-        <!-- Leaderboard Table -->
-        <div class="card shadow-sm">
-            <div class="card-body">
-                <h5 class="card-title mb-4">Top Investors</h5>
+        <!-- Tab Content -->
+        <div class="tab-content" id="leaderboardTabContent">
+            <!-- Single Player Tab -->
+            <div class="tab-pane fade show active" id="single" role="tabpanel" aria-labelledby="single-tab">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title mb-4">Top Single Player Investors</h5>
 
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead class="thead-light">
-                            <tr>
-                                <th scope="col" width="10%">Rank</th>
-                                <th scope="col" width="30%">Player</th>
-                                <th scope="col" width="20%">Section</th>
-                                <th scope="col" width="20%">Final Portfolio</th>
-                                <th scope="col" width="20%">Date</th>
-                            </tr>
-                        </thead>
-                        <tbody id="leaderboard-table-body">
-                            <!-- Leaderboard entries will be populated dynamically -->
-                            <tr>
-                                <td colspan="5" class="text-center py-4">
-                                    <div class="spinner-border text-primary" role="status">
-                                        <span class="sr-only">Loading...</span>
-                                    </div>
-                                    <p class="mt-2">Loading leaderboard data...</p>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th scope="col" width="10%">Rank</th>
+                                        <th scope="col" width="30%">Player</th>
+                                        <th scope="col" width="20%">Section</th>
+                                        <th scope="col" width="20%">Final Portfolio</th>
+                                        <th scope="col" width="20%">Date</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="single-leaderboard-body">
+                                    <!-- Single player leaderboard entries will be populated dynamically -->
+                                    <tr>
+                                        <td colspan="5" class="text-center py-4">
+                                            <div class="spinner-border text-primary" role="status">
+                                                <span class="sr-only">Loading...</span>
+                                            </div>
+                                            <p class="mt-2">Loading leaderboard data...</p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div id="single-no-results" class="alert alert-info d-none">
+                            No results found for the selected filters.
+                        </div>
+
+                        <div id="single-pagination" class="d-flex justify-content-center mt-4">
+                            <!-- Pagination will be added dynamically -->
+                        </div>
+                    </div>
                 </div>
+            </div>
 
-                <div id="no-results" class="alert alert-info d-none">
-                    No results found for the selected filters.
+            <!-- Class Games Tab -->
+            <div class="tab-pane fade" id="class" role="tabpanel" aria-labelledby="class-tab">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title mb-4">Top Class Game Investors</h5>
+
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th scope="col" width="10%">Rank</th>
+                                        <th scope="col" width="30%">Player</th>
+                                        <th scope="col" width="20%">Section</th>
+                                        <th scope="col" width="20%">Final Portfolio</th>
+                                        <th scope="col" width="20%">Date</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="class-leaderboard-body">
+                                    <!-- Class game leaderboard entries will be populated dynamically -->
+                                    <tr>
+                                        <td colspan="5" class="text-center py-4">
+                                            <div class="spinner-border text-primary" role="status">
+                                                <span class="sr-only">Loading...</span>
+                                            </div>
+                                            <p class="mt-2">Loading leaderboard data...</p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div id="class-no-results" class="alert alert-info d-none">
+                            No results found for the selected filters.
+                        </div>
+
+                        <div id="class-pagination" class="d-flex justify-content-center mt-4">
+                            <!-- Pagination will be added dynamically -->
+                        </div>
+                    </div>
                 </div>
+            </div>
 
-                <div id="pagination" class="d-flex justify-content-center mt-4">
-                    <!-- Pagination will be added dynamically -->
+            <!-- Overall Tab -->
+            <div class="tab-pane fade" id="overall" role="tabpanel" aria-labelledby="overall-tab">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title mb-4">Top Investors Overall</h5>
+
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th scope="col" width="10%">Rank</th>
+                                        <th scope="col" width="30%">Player</th>
+                                        <th scope="col" width="20%">Section</th>
+                                        <th scope="col" width="20%">Final Portfolio</th>
+                                        <th scope="col" width="20%">Date</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="overall-leaderboard-body">
+                                    <!-- Overall leaderboard entries will be populated dynamically -->
+                                    <tr>
+                                        <td colspan="5" class="text-center py-4">
+                                            <div class="spinner-border text-primary" role="status">
+                                                <span class="sr-only">Loading...</span>
+                                            </div>
+                                            <p class="mt-2">Loading leaderboard data...</p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div id="overall-no-results" class="alert alert-info d-none">
+                            No results found for the selected filters.
+                        </div>
+
+                        <div id="overall-pagination" class="d-flex justify-content-center mt-4">
+                            <!-- Pagination will be added dynamically -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -219,7 +321,7 @@
     <script src="../../js/firebase-auth-config.js"></script>
 
     <!-- Leaderboard Script -->
-    <script src="js/leaderboard.js"></script>
+    <script src="js/leaderboard.js?v=2"></script>
 
     <!-- Other Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
