--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -642,10 +642,10 @@
     <script src="../../js/firebase-auth-config.js"></script>
 
     <!-- Game Scripts -->
-    <script src="js/game-core.js"></script>
-    <script src="js/game-ui.js"></script>
-    <script src="js/game-trading.js"></script>
-    <script src="js/class-game.js"></script>
+    <script src="js/game-core.js?v=7"></script>
+    <script src="js/game-ui.js?v=7"></script>
+    <script src="js/game-trading.js?v=7"></script>
+    <script src="js/class-game.js?v=2"></script>
 
     <!-- Chart.js Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
