--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -554,12 +554,18 @@
         </div>
     </div>
 
+    <!-- Firebase Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="../../js/firebase-auth-config.js"></script>
+
+    <!-- jQuery and Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
-    <script src="js/game-core.js?v=6"></script>
-    <script src="js/game-ui.js?v=6"></script>
-    <script src="js/game-trading.js?v=6"></script>
+    <script src="js/game-core.js?v=9"></script>
+    <script src="js/game-ui.js?v=9"></script>
+    <script src="js/game-trading.js?v=9"></script>
     <script>
         // Make sure functions are available globally
         window.updateUI = typeof updateUI !== 'undefined' ? updateUI : function() {
