--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -639,13 +639,14 @@
     <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="../../js/firebase-auth-config.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="../../js/firebase-auth-config.js?v=2"></script>
 
     <!-- Game Scripts -->
-    <script src="js/game-core.js?v=10"></script>
-    <script src="js/game-ui.js?v=10"></script>
-    <script src="js/game-trading.js?v=10"></script>
-    <script src="js/class-game.js?v=3"></script>
+    <script src="js/game-core.js?v=11"></script>
+    <script src="js/game-ui.js?v=11"></script>
+    <script src="js/game-trading.js?v=11"></script>
+    <script src="js/class-game.js?v=4"></script>
 
     <!-- Chart.js Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
