--- a/activities/investment-odyssey/about.html
+++ b/activities/investment-odyssey/about.html
@@ -102,7 +102,9 @@
                         <a href="../../activities/index.html">Activities</a>
                         <a href="about.html" class="active">About</a>
                         <a href="index.html">Play Game</a>
+                        <a href="class-game.html">Class Game</a>
                         <a href="leaderboard.html">Leaderboard</a>
+                        <a href="statistics.html">Statistics</a>
                     </div>
                     <h1 class="activity-title">About Investment Odyssey</h1>
                     <p class="activity-date">Understanding the market simulation</p>
