--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -173,6 +173,7 @@
                         <a href="index.html">Play Game</a>
                         <a href="class-game.html" class="active">Class Game</a>
                         <a href="leaderboard.html">Leaderboard</a>
+                        <a href="statistics.html">Statistics</a>
                     </div>
                     <h1 class="banner-title">Investment Odyssey</h1>
                     <p class="banner-subtitle">Class Game Mode</p>
