--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -99,7 +99,9 @@
                         <a href="../../activities/index.html">Activities</a>
                         <a href="about.html">About</a>
                         <a href="index.html" class="active">Play Game</a>
+                        <a href="class-game.html">Class Game</a>
                         <a href="leaderboard.html">Leaderboard</a>
+                        <a href="statistics.html">Statistics</a>
                     </div>
                     <h1 class="activity-title">Investment Odyssey</h1>
                     <p class="activity-date">Practice your investment skills in this simulation</p>
@@ -166,7 +168,7 @@
                                 <thead>
                                     <tr>
                                         <th>Asset</th>
-                                        <th>Price</th>
+                                        <th>Price</th> 
                                         <th>Change</th>
                                         <th>Quantity</th>
                                         <th>Value</th>
