--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -84,6 +84,7 @@
                         <a href="index.html">Play Game</a>
                         <a href="class-game.html">Class Game</a>
                         <a href="leaderboard.html" class="active">Leaderboard</a>
+                        <a href="statistics.html">Statistics</a>
                     </div>
                     <h1 class="banner-title">Investment Odyssey Leaderboard</h1>
                     <p class="banner-subtitle">See how your investment skills compare to others!</p>
@@ -152,33 +153,77 @@
             </div>
         </div>
 
-        <!-- Personal Stats Card -->
-        <div id="personal-stats" class="card mb-4 shadow-sm d-none">
-            <div class="card-body">
-                <h5 class="card-title">Your Stats</h5>
-                <div class="row mt-3">
-                    <div class="col-md-3 text-center mb-3 mb-md-0">
-                        <div class="bg-light p-3 rounded">
-                            <h6 class="text-muted">Best Score</h6>
-                            <h3 id="personal-best-score">$0</h3>
+        <!-- Stats Cards -->
+        <div class="row mb-4">
+            <!-- Personal Stats Card -->
+            <div class="col-md-6">
+                <div id="personal-stats" class="card shadow-sm h-100 d-none">
+                    <div class="card-header bg-primary text-white">
+                        <h5 class="card-title mb-0">Your Stats</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-6 text-center mb-3">
+                                <div class="bg-light p-3 rounded">
+                                    <h6 class="text-muted">Best Score</h6>
+                                    <h3 id="personal-best-score">$0</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 text-center mb-3">
+                                <div class="bg-light p-3 rounded">
+                                    <h6 class="text-muted">Average Score</h6>
+                                    <h3 id="personal-avg-score">$0</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 text-center mb-3 mb-md-0">
+                                <div class="bg-light p-3 rounded">
+                                    <h6 class="text-muted">Games Played</h6>
+                                    <h3 id="personal-games-played">0</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 text-center mb-3 mb-md-0">
+                                <div class="bg-light p-3 rounded">
+                                    <h6 class="text-muted">Best Rank</h6>
+                                    <h3 id="personal-best-rank">#0</h3>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-3 text-center mb-3 mb-md-0">
-                        <div class="bg-light p-3 rounded">
-                            <h6 class="text-muted">Average Score</h6>
-                            <h3 id="personal-avg-score">$0</h3>
-                        </div>
+                </div>
+            </div>
+
+            <!-- Global Stats Card -->
+            <div class="col-md-6">
+                <div class="card shadow-sm h-100">
+                    <div class="card-header bg-success text-white">
+                        <h5 class="card-title mb-0">Global Stats</h5>
                     </div>
-                    <div class="col-md-3 text-center mb-3 mb-md-0">
-                        <div class="bg-light p-3 rounded">
-                            <h6 class="text-muted">Games Played</h6>
-                            <h3 id="personal-games-played">0</h3>
-                        </div>
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <div class="bg-light p-3 rounded">
-                            <h6 class="text-muted">Best Rank</h6>
-                            <h3 id="personal-best-rank">#0</h3>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-6 text-center mb-3">
+                                <div class="bg-light p-3 rounded">
+                                    <h6 class="text-muted">Average Portfolio</h6>
+                                    <h3 id="global-avg-portfolio">$0</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 text-center mb-3">
+                                <div class="bg-light p-3 rounded">
+                                    <h6 class="text-muted">Top Score</h6>
+                                    <h3 id="global-top-score">$0</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 text-center mb-3 mb-md-0">
+                                <div class="bg-light p-3 rounded">
+                                    <h6 class="text-muted">Total Players</h6>
+                                    <h3 id="global-total-players">0</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 text-center mb-3 mb-md-0">
+                                <div class="bg-light p-3 rounded">
+                                    <h6 class="text-muted">Total Games</h6>
+                                    <h3 id="global-total-games">0</h3>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -231,6 +276,43 @@
 
             <!-- Class Games Tab -->
             <div class="tab-pane fade" id="class" role="tabpanel" aria-labelledby="class-tab">
+                <!-- Class Game Selection -->
+                <div class="card shadow-sm mb-4">
+                    <div class="card-header bg-info text-white">
+                        <h5 class="card-title mb-0">Class Game History</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="row align-items-center">
+                            <div class="col-md-6">
+                                <div class="form-group mb-md-0">
+                                    <label for="class-game-select">Select Class Game:</label>
+                                    <select id="class-game-select" class="form-control">
+                                        <option value="all">All Class Games</option>
+                                        <!-- Class games will be populated dynamically -->
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="d-flex justify-content-md-end mt-3 mt-md-0">
+                                    <div class="mr-3">
+                                        <span class="text-muted">Game Date:</span>
+                                        <h6 id="class-game-date">-</h6>
+                                    </div>
+                                    <div class="mr-3">
+                                        <span class="text-muted">TA:</span>
+                                        <h6 id="class-game-ta">-</h6>
+                                    </div>
+                                    <div>
+                                        <span class="text-muted">Players:</span>
+                                        <h6 id="class-game-players">-</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Class Game Leaderboard -->
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title mb-4">Top Class Game Investors</h5>
@@ -322,7 +404,7 @@
     <script src="../../js/firebase-auth-config.js?v=2"></script>
 
     <!-- Leaderboard Script -->
-    <script src="js/leaderboard.js?v=5"></script>
+    <script src="js/leaderboard.js?v=6"></script>
 
     <!-- Other Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
