--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -403,8 +403,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="../../js/firebase-auth-config.js?v=2"></script>
 
+    <!-- Service Fallback to ensure Service is available -->
+    <script src="js/service-fallback.js"></script>
+
     <!-- Leaderboard Script -->
-    <script src="js/leaderboard.js?v=6"></script>
+    <script src="js/leaderboard.js?v=7"></script>
 
     <!-- Other Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
