--- a/activities/investment-odyssey/statistics.html
+++ b/activities/investment-odyssey/statistics.html
@@ -324,8 +324,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="../../js/firebase-auth-config.js?v=2"></script>
 
+    <!-- Service Fallback to ensure Service is available -->
+    <script src="js/statistics-fallback.js"></script>
+
     <!-- Statistics Script -->
-    <script src="js/statistics.js?v=1"></script>
+    <script src="js/statistics.js?v=2"></script>
 
     <!-- Other Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
